--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
@@ -13,9 +14,12 @@
     "@testing-library/user-event": "^13.5.0",
     "node-sass": "^8.0.0",
     "react": "^18.1.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.9.3",
     "sass": "^1.58.3",
+    "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
