--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-tilt": "^0.1.4",
     "react-tsparticles": "^2.9.3",
+    "react-typing-effect": "^2.0.5",
     "sass": "^1.58.3",
     "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
